added loading animation

--- a/templates/html-css-js/studio.html
+++ b/templates/html-css-js/studio.html
@@ -9,10 +9,17 @@
     <link rel="stylesheet" href="static/CSS/navbar.css">
     <title>Document</title>
     <link rel="stylesheet" href="static/CSS/studio.css">
+    <link rel="stylesheet" href="static/Load/load.css">
     
     <script src="static/JS/lottie.js"></script>
 </head>
+<script src="static/Load/load.js"></script>
 <body>
+    <div id="load">
+        <script src="static/Load/lottie.js"></script>
+        <lottie-player id="player" src="static/Load/load-car.json"  background="transparent"  speed="1.5"   loop autoplay></lottie-player>
+        <p>LOADING</p>
+    </div>
     <div id="page">
         <section id="hero">
             <nav id="navbar">
