added loading animation-1

--- a/templates/html-css-js/products.html
+++ b/templates/html-css-js/products.html
@@ -21,7 +21,16 @@
         border-radius: 10px;
     }
 </style>
+<link rel="stylesheet" href="static/Load/load.css">
+    
+    <script src="static/JS/lottie.js"></script>
+
+<script src="static/Load/load.js"></script>
 <body>
+    <div id="load">
+        <lottie-player id="player" src="static/Load/load-car.json"  background="transparent"  speed="1.5"   loop autoplay></lottie-player>
+        <p>LOADING</p>
+    </div>
     <div id="page">
         <section id="hero" class="">
             <nav id="navbar">
