--- a/templates/html-css-js/services.html
+++ b/templates/html-css-js/services.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" href="static/CSS/navbar.css">
     <title>Services</title>
     <link rel="stylesheet" href="static/CSS/services.css">
+    <link rel="stylesheet" href="static/Load/load.css">
+    
+    <script src="static/JS/lottie.js"></script>
 </head>
+<script src="static/Load/load.js"></script>
 <body>
+    <div id="load">
+        <lottie-player id="player" src="static/Load/load-car.json"  background="transparent"  speed="1.5"   loop autoplay></lottie-player>
+        <p>LOADING</p>
+    </div>
     <div id="page">
         <section id="hero">
             <nav id="navbar">
