--- a/static/CSS/article.css
+++ b/static/CSS/article.css
@@ -28,6 +28,10 @@ body{
     z-index: -10;
 }
 
+.light #page-label{
+    color: #e3e3e3;
+}
+
 #article-page{
     width: 80%;
     margin: 0 auto;
@@ -65,6 +69,14 @@ body{
     letter-spacing: 0.05em;
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
+}
+
+.light .title{
+    color: #212121;
+}
+
+.light .article *{
+    color: #292929;
 }
 
 .article *{
