--- a/static/CSS/navbar.css
+++ b/static/CSS/navbar.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 #navbar{
     width: 80%;
     height: 170px;
@@ -11,7 +12,15 @@
     /* border: 1px dashed white ; */
     z-index: 10;
 }
-
+#navbar > img{
+    width: 110%;
+    position: absolute;
+    z-index: -10;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+}
 .nav-item{
     text-decoration: none;
     font-size: 18px;
@@ -19,6 +28,7 @@
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 1px;
     font-style: normal;
+    color: white;
 }
 
 #nav-logo{
