--- a/static/CSS/products.css
+++ b/static/CSS/products.css
@@ -42,6 +42,10 @@
     margin: 7em 2em;
 }
 
+.light .product{
+    background-color: rgb(219, 219, 219);
+}
+
 .product > h3{
     font-family: 'Josefin Sans', sans-serif;
     letter-spacing: 0.02em;
@@ -82,6 +86,10 @@
     cursor: pointer;
 }
 
+.light .choose-plan-btn{
+    background-color: #4c00ef;
+}
+
 .choose-plan-btn > img{
     width: 30%;
     height: 30%;
@@ -116,6 +124,10 @@
     border: 3px solid white;
     padding: 2em 4em;
     margin: 4em 0 10em 0;
+}
+
+.light #better-sec > a{
+    border-color: #000;
 }
 
 
