--- a/static/CSS/sidebar.css
+++ b/static/CSS/sidebar.css
@@ -8,11 +8,16 @@
     z-index: 10;
 }
 
+.side-bar-activate-body{
+    overflow: hidden;
+    height: 100%;
+}
+
 #sidebar-container{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.788);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 3;
@@ -30,6 +35,12 @@
     right: 50%;
     transition: right 0.1s ease-in;
     max-width: 250px;
+}
+
+.sidebar-activate{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .sidebar-activate #sidebar-container {
@@ -62,7 +73,9 @@
     text-decoration: none;
     font-size: 15px;
 }
-
+.light .nav-item p{
+    color: white;
+}
 .nav-item > a > img{
     margin: 0 20px 0 30px;
 }
