--- a/static/CSS/studio.css
+++ b/static/CSS/studio.css
@@ -146,6 +146,10 @@
     border: 3px solid white;
     margin: 1.5em;
 }
+
+.light #join-us-sec > a{
+    border: 3px solid rgb(0, 0, 0);
+}
 .container{
     width: 100%;
     overflow-x: hidden;
