--- a/static/Load/load.css
+++ b/static/Load/load.css
@@ -10,6 +10,7 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    display: none;
 }
 
 #load > p{
@@ -22,6 +23,10 @@
     top: calc(50% + 70px);
     left: calc(50% + 5px);
     font-family: 'Montserrat', sans-serif;
+}
+
+.light p{
+    color: black;
 }
 
 .loaded > #page{
