--- a/templates/html-css-js/article.html
+++ b/templates/html-css-js/article.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="../static/CSS/navbar.css">
     <title>News</title>
     <link rel="stylesheet" href="../static/CSS/article.css">
+    <link rel="stylesheet" href="../static/CSS/light-mode.css">
     <!-- <link rel="stylesheet" href="static/Load/load.css">
     
     <script src="static/JS/lottie.js"></script> -->
 </head>
 <!-- <script src="static/Load/load.js"></script> -->
-<body>
+<body class="light">
     <!-- <div id="load">
         <lottie-player id="player" src="static/Load/load-car.json"  background="transparent"  speed="1.5"   loop autoplay></lottie-player>
         <p>LOADING</p>
@@ -22,6 +23,7 @@
     <div id="page">
         <section id="hero">
             <nav id="navbar">
+                <img src="../static/Assets/Products/nav-bg.png" alt="">
                 <a class="nav-item" href="/">
                     <img id="nav-logo" src="../static/Assets/logo.svg" alt="">
                 </a>
@@ -82,7 +84,8 @@
                 </div>
             </div>
             <div id="hamburger">
-                <img src="../static/Assets/hamburger.svg" alt="">
+                <img class="darkmode-item" src="../static/Assets/hamburger.svg" alt="">
+                <img class="lightmode-item" src="../static/light-img/light-hamburger.svg" alt="">
             </div>
             <h1 id="page-label">NEWS</h1>
             <div id="article-page" class="">
@@ -101,4 +104,5 @@
     </div>
 </body>
 <script src="../static/JS/sidebar.js"></script>
+<script src="../static/JS/switch-theme.js"></script>
 </html>
