added light mode

--- a/templates/html-css-js/services.html
+++ b/templates/html-css-js/services.html
@@ -189,7 +189,7 @@
         </div>
 
         <img class="darkmode-item" id="waves" src="static/Assets/waves-1.svg" alt="">
-        <img class="lightmode-item" id="waves" src="static/light-img/waves-1.svg" alt="">
+        <img class="lightmode-item" id="waves" src="static/Assets/waves_cut.svg" alt="">
 
         <div id="wait-sec">
             <h1>What are you waiting for?</h1>
