--- a/templates/html-css-js/studio.html
+++ b/templates/html-css-js/studio.html
@@ -127,7 +127,7 @@
 
 
     <img class="darkmode-item waves" src="static/Assets/waves-1.svg" alt="">
-    <img class="lightmode-item waves" src="static/light-img/waves-1.svg" alt="">
+    <img class="lightmode-item waves" src="static/Assets/waves_cut.svg" alt="">
 
     <h1 id="achievements-heading">
         Our Achievements
