--- a/static/CSS/services.css
+++ b/static/CSS/services.css
@@ -190,6 +190,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
+    
 }
 
 #wait-sec > h1{
@@ -246,6 +248,9 @@
     #wait-sec > a{
         font-size: 1.5em;
 
+    }
+    #wait-sec{
+        margin-top: 0px;
     }
 }
 
@@ -331,5 +336,8 @@
     #wait-sec > a{
         font-size: 3.2em;
         margin-bottom: 10em;
+    }
+    #wait-sec{
+        margin-top: -400px;
     }
 }
