--- a/static/CSS/studio.css
+++ b/static/CSS/studio.css
@@ -154,7 +154,7 @@
     width: 100%;
     overflow-x: hidden;
     position: relative;
-    margin: 10vw 0;
+    margin: 10vw 0 5vw 0;
 }
 #slider{
     /* background-color: red; */
