--- a/templates/html-css-js/index.html
+++ b/templates/html-css-js/index.html
@@ -96,14 +96,14 @@
                 <img class="lightmode-item"  src="static/light-img/light-hamburger.svg" alt="">
             </div>
             <img id="grid" src="static/Assets/square-grid.png" alt="">
-            <img src="static/Assets/y_cube.png" alt="" id="abs_cube">
+            <!-- <img src="static/Assets/y_cube.png" alt="" id="abs_cube">
             <img src="static/Assets/sparkle_1.png" alt="" id="abs_sparkle_1">
             <img src="static/Assets/sparkle_2.png" alt="" id="abs_sparkle_2">
-            <img src="static/Assets/b_ring.png" alt="" id="abs_ring">
+            <img src="static/Assets/b_ring.png" alt="" id="abs_ring"> -->
             <h1 id="mainTitle">
                 CarSherpas is a digital first advertising firm born in a dealership and molded by technology.
             </h1>
-
+           
         </section>
         <section id="incrementSec">
             <div class="incrementUnit">
