--- a/templates/html-css-js/services.html
+++ b/templates/html-css-js/services.html
@@ -96,7 +96,7 @@
                 <h1>OUR ARENA</h1>
                 <div id="sharp-line"></div>
                 <div id="marquee-clone" class="">
-                    <div id="mov-1" class="mov-container x">
+                    <div id="mov-1" class="mov-container">
                         <span class="icon-circle">
                             <img src="static/Assets/Services/icon-1.svg" alt="">
                         </span>
@@ -122,7 +122,7 @@
                             <img src="static/Assets/Services/icon-8.svg" alt="">
                         </span>
                     </div>
-                    <div id="mov-2" class="mov-container x">
+                    <!-- <div id="mov-2" class="mov-container x">
                         <span class="icon-circle">
                             <img src="static/Assets/Services/icon-1.svg" alt="">
                         </span>
@@ -147,7 +147,7 @@
                         <span class="icon-circle">
                             <img src="static/Assets/Services/icon-8.svg" alt="">
                         </span>
-                    </div>
+                    </div> -->
                     </div>
                 </div>
 
