--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,4 +17,15 @@
             </div>
         </div>
     </div>
+    <br> <br>
+    <div class=" container d-flex align-items-center justify-content-center">
+        <div class="btn-group">
+            <div class="btn btn-success">
+                <a class="btn btn-success" href="/upload-achievements">Upload Achievements</a> 
+            </div>
+            <div class="btn btn-warning">
+                <a class="btn btn-warning" href="/upload-studio-img">Upload Studio Image</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
