--- a/templates/html-css-js/contactus.html
+++ b/templates/html-css-js/contactus.html
@@ -22,6 +22,7 @@
     <div id="page">
         <section id="hero">
             <nav id="navbar">
+                <img src="static/Assets/Products/nav-bg.png" alt="">
                 <a class="nav-item" href="/">
                     <img id="nav-logo" src="static/Assets/logo.svg" alt="">
                 </a>
