--- a/templates/html-css-js/products.html
+++ b/templates/html-css-js/products.html
@@ -130,69 +130,71 @@
                     </a>
                 </div>
                 <div class="product ">
-                    <h3>Everest Bundle</h3>
+                    <h3>K2 Bundle</h3>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Spend 13.8K</p>
+                        <p>Spend $9.8k 
+                        </p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>350 Chats Engaged</p>
+                        <p>300 Chats Engaged
+                        </p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>400 CRM Leads</p>
+                        <p>350 CRM Leads</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>500 Clicks</p>
+                        <p>3000 Clicks</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Weekly Text Blasts</p>
+                        <p>Bi-Monthly Text Blasts</p>
                     </div>
-                    <div class="prod-feature">
+                    <!-- <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
                         <p>Commercial Streaming</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
                         <p>Quaterly Hiring Event</p>
-                    </div>
+                    </div> -->
                     <a class="choose-plan-btn" href="/contactus">
                         <img src="static/Assets/Products/just_tick.svg" alt="">
                     </a>
                 </div>
                 <div class="product ">
-                    <h3>Everest Bundle</h3>
+                    <h3>Rainier Bundle</h3>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Spend 13.8K</p>
+                        <p>Spend $6.2k </p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>350 Chats Engaged</p>
+                        <p>125 Chats Engaged</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>400 CRM Leads</p>
+                        <p>160 CRM Leads</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>500 Clicks</p>
+                        <p>1000 Clicks</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
-                        <p>Weekly Text Blasts</p>
+                        <p>Monthly Text Blasts</p>
                     </div>
-                    <div class="prod-feature">
+                    <!-- <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
                         <p>Commercial Streaming</p>
                     </div>
                     <div class="prod-feature">
                         <img src="static/Assets/Products/hollow-circle-tick.svg" alt="">
                         <p>Quaterly Hiring Event</p>
-                    </div>
+                    </div> -->
                     <a class="choose-plan-btn" href="/contactus">
                         <img src="static/Assets/Products/just_tick.svg" alt="">
                     </a>
