--- a/templates/html-css-js/studio.html
+++ b/templates/html-css-js/studio.html
@@ -94,7 +94,8 @@
                 </div>
                 <div id="bottom-hero" class="">
                     <div id="lottie-container" class="">
-                        <lottie-player class="lottie-player " id="player" src="static/JS/red-car-animation.json"  background="transparent"  speed="1"   loop autoplay></lottie-player>
+                        <!-- <lottie-player class="lottie-player " id="player" src="static/JS/red-car-animation.json"  background="transparent"  speed="1"   loop autoplay></lottie-player> -->
+                        <img src="{{hero_img_path}}" alt="">
                     </div>
                 </div>
             </div>
@@ -136,21 +137,21 @@
     <div id="ach-section" class="">
         <img src="static/Assets/Studio/achievements-img.svg" alt="">
         <div class="ach-unit " id="ach-unit-1">
-            <h1>Title</h1>
+            <h1>{{achievements[0][0]}}</h1>
             <p>
-                Subtitle
+                {{achievements[0][1]}}
             </p>
         </div>
         <div class="ach-unit " id="ach-unit-2">
-            <h1>Title</h1>
+            <h1>{{achievements[1][0]}}</h1>
             <p>
-                Subtitle
+                {{achievements[1][1]}}
             </p>
         </div>
         <div class="ach-unit " id="ach-unit-3">
-            <h1>Title</h1>
+            <h1>{{achievements[2][0]}}</h1>
             <p>
-                Subtitle
+                {{achievements[2][1]}}
             </p>
         </div>
     </div>
