--- a/templates/html-css-js/services.html
+++ b/templates/html-css-js/services.html
@@ -180,7 +180,7 @@
 
         <div class="mobile-design d1">
             <div class="left">
-                <h1>Automated Assistant</h1>
+                <h1>Personalised Ads</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
             </div>
             <div class="right">
