--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,6 +26,9 @@
             <div class="btn btn-warning">
                 <a class="btn btn-warning" href="/upload-studio-img">Upload Studio Image</a>
             </div>
+            <div class="btn btn-primary">
+                <a class="btn btn-primary" href="/spotlight-content-upload">Splotlight Content Upload</a>
+            </div>
         </div>
     </div>
 {% endblock %}
