--- a/templates/html-css-js/index.html
+++ b/templates/html-css-js/index.html
@@ -41,6 +41,7 @@
                     <a class="nav-item" href="/services">Services</a>
                     <a class="nav-item" href="/studio">Studio</a>
                     <a class="nav-item" href="/news">News</a>
+                    <a class="nav-item" href="/contactus">Contact</a>
                 </div>
                 <div class="nav-item" onclick="modeToggle()">
                     <img id="nav-mode" src="static/Assets/sun.svg" alt="">
@@ -154,14 +155,14 @@
             </g>
                 
             
-            <text class="sub-text" x="0" y="2655">We turn shoppers into a buyers by </text>
+            <text class="sub-text" x="0" y="2655">We turn shoppers into buyers by </text>
             <text class="sub-text" x="0" y="2735" >putting your unique inventory in the </text>
             <text class="sub-text" x="0" y="2815" >
                 palm of their hands
             </text>
             </g>
 
-            We turn shoppers into a buyers by putting your unique inventory in the palm of their hands
+            
             
             
             <g >
