--- a/static/CSS/contactus.css
+++ b/static/CSS/contactus.css
@@ -25,6 +25,13 @@
     font-weight: 500;
     font-size: 40px;
     margin-bottom: 50px;
+    color: white;
+    position: relative;
+    left: 7%;
+}
+
+.light #content > h1{
+    color: black;
 }
 
 .line{
@@ -36,12 +43,22 @@
 
 }
 
+
+
 .line > img{
     width: 30px;
 }
 
 .line > p{
     margin: 20px 20px;
+}
+
+.light .line > p{
+    color: black;
+}
+
+.line > p{
+    color: white;
 }
 
 @media screen and (min-width: 0px){
