--- a/static/CSS/services.css
+++ b/static/CSS/services.css
@@ -48,10 +48,14 @@
 
 .mov-container{
     /* width: 200%; */
+
     width: 72em;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     /* flex-wrap: wrap; */
     border-left: none;
     border-right: none;
@@ -68,7 +72,7 @@
     height: 6em;
     border-radius: 50%;
     background-color: black;
-    margin: 0 1.5em;
+    margin: 1em 1.5em;
     border: 2px solid rgba(255, 255, 255, 0.317);
     display: flex;
     justify-content: center;
