--- a/static/CSS/studio.css
+++ b/static/CSS/studio.css
@@ -372,3 +372,10 @@
     }
 
 }
+
+@media (orientation: portrait){
+    #lottie-container > img{
+        width: 100%;
+        height: auto;
+    }
+}
