--- a/templates/html-css-js/article.html
+++ b/templates/html-css-js/article.html
@@ -33,8 +33,9 @@
                     <a class="nav-item" href="/services">Services</a>
                     <a class="nav-item" href="/studio">Studio</a>
                     <a class="nav-item" href="/news">News</a>
+                    <a class="nav-item" href="/contactus">Contact</a>
                 </div>
-                <a class="nav-item" href="/">
+                <a class="nav-item" onclick="modeToggle()">
                     <img id="nav-mode" src="../static/Assets/sun.svg" alt="">
                 </a>
             </nav>
